--- a/style.css
+++ b/style.css
@@ -93,12 +93,13 @@ h2 {
   object-fit:cover;
   float: left;
   margin-left: 100px;
-  margin-top: 40px;
+  margin-top: 120px;
 }
 img {
   width: 300px;
   height: 400px;
   border-radius: 10px;
+  border: 2px solid #394236;
   box-shadow: 10px 10px 10px grey;
   object-fit: cover;
 }
@@ -112,7 +113,8 @@ img {
 .viewResume {
   float: right;
   margin-top: 100px;
-  margin-right: 450px;;
+  margin-right: 450px;
+  margin-bottom: 75px;
   width: 200px;
   height: 50px;
   font-size: 18px;
