--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ fieldset {
   width: 30%;
   height: 200px;
   margin-left: 33%;
-  justify-content: center;
+  align-content: center;
 }
 #contact {
   align-items: center;
