--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ h1 {
   padding-top: 3em;
   background-image: url("https://images.unsplash.com/photo-1565106430482-8f6e74349ca1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
   background-size: cover;
+  opacity: 90%;
 }
    
 .header-tag {
@@ -70,11 +71,12 @@ h1 {
   text-align: center;
   color: #cecc77;
   text-shadow: 1px 1px 1px black;
+  font-weight: 500;
 }
    
 h3.header-tag {
   margin-top: -40px;
-  font-size: 18pt;
+  font-size: 20pt;
 }
    
 h2 {
@@ -82,6 +84,14 @@ h2 {
   text-align: center;
 }
 /* about section */
+.about-tag {
+  font-family: 'Karla';
+  text-align: center;
+  text-shadow: 1px 1px 1px black;
+  color: #394236;
+
+}
+
 #about {
   margin-top: 50px;
   display: inline-block;
@@ -89,7 +99,7 @@ h2 {
    
 #about-picture {
   width: 400px;
-  height:500px;
+  height: 500px;
   object-fit:cover;
   float: left;
   margin-left: 100px;
@@ -130,7 +140,6 @@ img {
 
 .main #about p {
   font-family: 'Montserrat';
-  font-style: italic;
   margin-top: 50px;
   font-size: 16px;
 }
@@ -245,7 +254,7 @@ fieldset p {
 /* footer section */
 #social-btns a {
   color: #394236;
-  margin: 2em;
+  margin: 3em;
   margin-left: 44px;
 }
    
