--- a/style.css
+++ b/style.css
@@ -62,15 +62,15 @@ h1 {
   padding-top: 3em;
   background-image: url("https://images.unsplash.com/photo-1565106430482-8f6e74349ca1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
   background-size: cover;
-  opacity: 90%;
+  opacity: 80%;
 }
    
 .header-tag {
   font-family: 'Karla';
   font-size: 60px;
   text-align: center;
-  color: #cecc77;
-  text-shadow: 1px 1px 1px black;
+  color: #f3f034;
+  text-shadow: 2px 2px 2px black;
   font-weight: 500;
 }
    
@@ -221,7 +221,7 @@ fieldset {
   text-align: center;
 }
 .contact {
-  margin-bottom: 20px;
+  margin-bottom: 50px;
   margin-top: 20px;
   width: 100%;
   text-align: center;
@@ -235,7 +235,7 @@ fieldset {
   color: #394236;
 }
 fieldset p {
-  margin-top: 10px;
+  margin-top: 17px;
 }
 .name {
   margin-bottom: 5px;
