--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ nav ul li {
 }
    
 .nav-link {
-  color:#a3afa1;
+  color: #d4f3ec;
   text-decoration: none;
   font-family: 'acme', sans-serif;
 }
@@ -36,7 +36,7 @@ nav ul li {
   font-size: 20px;
 }
 #brand .nav-link:hover {
-  color: #cecc77;
+  color: #d4f3ec;
 }
    
    
@@ -50,7 +50,7 @@ body {
 /* header */
 h1 {
   font-size: 40pt;
-  font-family: 'acme', sans-serif;
+  font-family: 'karla', 'acme', sans-serif;
 }
    
 #home {
@@ -62,20 +62,20 @@ h1 {
   padding-top: 3em;
   background-image: url("https://images.unsplash.com/photo-1565106430482-8f6e74349ca1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
   background-size: cover;
-  opacity: 80%;
 }
    
 .header-tag {
   font-family: 'Karla';
   font-size: 60px;
   text-align: center;
-  color: #f3f034;
+  color: #d4f3ec;
   text-shadow: 2px 2px 2px black;
   font-weight: 500;
+  margin-top: 1.5em;
 }
    
 h3.header-tag {
-  margin-top: -40px;
+  margin-top: -20px;
   font-size: 20pt;
 }
    
@@ -93,7 +93,7 @@ h2 {
 }
 
 #about {
-  margin-top: 50px;
+  margin-top: 20px;
   display: inline-block;
 }
    
@@ -103,17 +103,29 @@ h2 {
   object-fit:cover;
   float: left;
   margin-left: 100px;
-  margin-top: 120px;
+  margin-top: 9.5em;
 }
 img {
   width: 300px;
   height: 400px;
   border-radius: 10px;
-  border: 2px solid #394236;
+  border: 1px solid #394236;
   box-shadow: 10px 10px 10px grey;
   object-fit: cover;
 }
-   
+
+hr {
+  height: 1px;
+  background-color: #394236;
+  border: none
+}
+#hrtop {
+  margin-bottom: 50px
+}
+#hrbot{
+  margin-top: 50px
+}
+
 #about-content {
   width: 40vw;
   float: right;
@@ -121,15 +133,15 @@ img {
 }
 
 .viewResume {
-  float: right;
-  margin-top: 100px;
-  margin-right: 450px;
+  text-align: center;
+  margin-left: 26%;
+  margin-top: 75px;
   margin-bottom: 75px;
   width: 200px;
   height: 50px;
   font-size: 18px;
   color:#a3afa1;
-  border-radius: 10px;
+  border-radius: 5px;
   border-color: black;
   background-color: #394236;
 }
@@ -140,7 +152,7 @@ img {
 
 .main #about p {
   font-family: 'Montserrat';
-  margin-top: 50px;
+  margin-top: 30px;
   font-size: 16px;
 }
 /* portfolio section */
@@ -199,9 +211,9 @@ img {
   color: #cecc77;
 }
 .img-thumbnail {
-  width: 325px;
+  width: 329px;
   height: 300px;
-  border-radius: 5px;
+  border-radius: 5px 5px 0px 0px;
 }
 /*Contact me section*/
 .contact-tag {
@@ -213,8 +225,9 @@ img {
 fieldset {
   width: 30%;
   height: 200px;
-  margin-left: 33%;
+  margin-left: 34%;
   align-content: center;
+  border: 1px solid #394236;
 }
 #contact {
   align-items: center;
@@ -239,7 +252,7 @@ fieldset p {
 }
 .name {
   margin-bottom: 5px;
-  
+  align-content: center;
 }
 .email {
   margin-bottom: 5px;
@@ -251,11 +264,21 @@ fieldset p {
 #contactMeMessage {
   text-align: center;
 }
+.contactMeButton:hover {
+  color: #c9c736;
+}
+.contactMeButton {
+  color: white;
+  background-color: #626b60;
+  width: 10em;
+  height: 2em;
+}
+
+
 /* footer section */
 #social-btns a {
   color: #394236;
   margin: 3em;
-  margin-left: 44px;
 }
    
 #social-btns a:hover {
@@ -270,8 +293,6 @@ fieldset p {
 p {
   margin-top: 50px;
 }
-
-
 footer {
   margin-bottom: 0px;
 }
