--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* nav bar */
 nav {
-  background-color: #394236;
+  background-color: #1f241e;
   background-image: url("https://www.transparenttextures.com/patterns/dirty-old-black-shirt.png");
   position: fixed;
   top: 0;
@@ -30,6 +30,7 @@ nav ul li {
 .nav-link:hover {
   /* color: #c9c736; */
   font-weight: bold;
+  color: #c2cbc2;
 }
    
 #brand .nav-link {
@@ -59,20 +60,21 @@ h1 {
   position: relative;
   left: -8px;
   width: 100vw;
-  height: 30vh;
+  height: 90vh;
   padding-top: 3em;
-  background-image: url("https://images.unsplash.com/photo-1565106430482-8f6e74349ca1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
+  background-image: url("https://images.unsplash.com/photo-1492551557933-34265f7af79e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80");
   background-size: cover;
 }
    
 .header-tag {
-  font-family: 'Karla';
+  font-family: 'Montserrat', 'Karla';
+  font-weight: 800;
   font-size: 60px;
   text-align: center;
   color: #a3afa1;
   text-shadow: 2px 2px 2px black;
   font-weight: 500;
-  margin-top: 1em;
+  margin-top: 2.5em;
 }
    
 h3.header-tag {
@@ -89,7 +91,7 @@ h2 {
   font-family: 'Karla';
   text-align: center;
   text-shadow: 1px 1px 1px black;
-  color: #394236;
+  color: #1f241e;
 
 }
 
@@ -110,14 +112,14 @@ img {
   width: 300px;
   height: 400px;
   border-radius: 10px;
-  border: 1px solid #394236;
+  border: 1px solid #1f241e;
   box-shadow: 10px 10px 10px grey;
   object-fit: cover;
 }
 
 hr {
   height: 1px;
-  background-color: #394236;
+  background-color: #1f241e;
   border: none
 }
 #hrtop {
@@ -144,11 +146,11 @@ hr {
   color:#a3afa1;
   border-radius: 2px;
   border: 1px solid black;
-  background-color: #394236;
+  background-color: #1f241e;
 }
 
 .viewResume:hover {
-  color:#cecc77;
+  font-weight: bold;
 }
 
 .main #about p {
@@ -161,7 +163,7 @@ hr {
   font-family: 'Karla';
   text-align: center;
   text-shadow: 1px 1px 1px black;
-  color: #394236;
+  color: #1f241e;
 
 }
 .portfolio-cards {
@@ -174,13 +176,13 @@ hr {
 .card-one {
   border: 1px solid #394236;
   border-radius: 2px;
-  background-color: #394236;
+  background-color: #1f241e;
   color: #a3afa1;
 }
 .card-two {
-  border: 1px solid #394236;
+  border: 1px solid #1f241e;
   border-radius: 2px;
-  background-color: #394236;
+  background-color: #1f241e;
   color: #a3afa1;
 }
 .card-one a {
@@ -188,19 +190,21 @@ hr {
   text-decoration: none;
 }
 .card-one a:hover {
-  color: #c9c736;
+  font-weight: bold;
+  color: #c2cbc2;
 }
 .card-two a {
   color:#a3afa1;
   text-decoration: none;
 }
 .card-two a:hover {
-  color: #c9c736;
+  font-weight: bold;
+  color: #c2cbc2;
 }
 .card-three {
-  border: 1px solid #394236;
+  border: 1px solid #1f241e;
   border-radius: 2px;
-  background-color: #394236;
+  background-color: #1f241e;
   color: #a3afa1;
   text-decoration: none;
 }
@@ -209,7 +213,8 @@ hr {
   text-decoration: none;
 }
 .card-three a:hover {
-  color: #c9c736;
+  font-weight: bold;
+  color: #c2cbc2;
 }
 .img-thumbnail {
   width: 329px;
@@ -221,7 +226,7 @@ hr {
     font-family: 'Karla';
     text-align: center;
     text-shadow: 1px 1px 1px black;
-    color: #394236;
+    color: #1f241e;
     margin-top: 75px;
   }
 fieldset {
@@ -229,7 +234,7 @@ fieldset {
   height: 200px;
   margin-left: 34%;
   align-content: center;
-  border: 1px solid #394236;
+  border: 1px solid #1f241e;
 }
 #contact {
   align-items: center;
@@ -247,7 +252,7 @@ fieldset {
 
 fieldset {
   font-size: 16px;
-  color: #394236;
+  color: #1f241e;
 }
 fieldset p {
   margin-top: 17px;
@@ -267,12 +272,13 @@ fieldset p {
   text-align: center;
 }
 .contactMeButton:hover {
-  color: #c9c736;
+  font-weight: bold;
+  color: #c2cbc2;
 }
 .contactMeButton {
   color:#a3afa1;
   /* background-color: #626b60; */
-  background-color: #394236;
+  background-color: #1f241e;
   width: 10em;
   height: 2em;
   border: 1px solid black;
@@ -282,12 +288,12 @@ fieldset p {
 
 /* footer section */
 #social-btns a {
-  color: #394236;
+  color: #1f241e;
   margin: 3em;
 }
    
 #social-btns a:hover {
-  color: #c9c736;
+  color: #c2cbc2;
 }
    
 #social-btns {
@@ -301,3 +307,4 @@ p {
 footer {
   margin-bottom: 0px;
 }
+
