--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ h1 {
   width: 100vw;
   height: 90vh;
   padding-top: 3em;
-  background-image: url("https://images.unsplash.com/photo-1492551557933-34265f7af79e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80");
+  background-image: url("laptopimage.png");
   background-size: cover;
 }
    
